--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser-dynamic": "~12.1.4",
     "@angular/router": "~12.1.4",
     "@ngneat/tailwind": "^7.0.3",
+    "@ngrx/effects": "^12.3.0",
+    "@ngrx/store": "^12.3.0",
+    "@ngrx/store-devtools": "^12.3.0",
     "animate.css": "^4.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
