--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@ngrx/store-devtools": "^12.3.0",
     "@sweetalert2/ngx-sweetalert2": "^10.0.0",
     "animate.css": "^4.1.1",
+    "aws-sdk": "^2.977.0",
+    "lodash": "^4.17.21",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.4",
     "tslib": "^2.0.0",
+    "util": "^0.12.4",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.11.4"
   },
@@ -40,7 +43,8 @@
     "@tailwindcss/line-clamp": "0.2.1",
     "@tailwindcss/typography": "0.4.1",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/lodash": "^4.14.172",
+    "@types/node": "^12.20.21",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
