add-good implementation

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~12.1.4",
     "@angular/platform-browser-dynamic": "~12.1.4",
     "@angular/router": "~12.1.4",
+    "@ckeditor/ckeditor5-angular": "^2.0.2",
+    "@ckeditor/ckeditor5-build-classic": "^27.1.0",
     "@ngneat/tailwind": "^7.0.3",
     "@ngrx/effects": "^12.3.0",
     "@ngrx/store": "^12.3.0",
@@ -39,9 +41,11 @@
     "@angular/cli": "~12.1.4",
     "@angular/compiler-cli": "~12.1.4",
     "@tailwindcss/aspect-ratio": "0.2.1",
+    "@tailwindcss/custom-forms": "^0.2.1",
     "@tailwindcss/forms": "0.3.3",
     "@tailwindcss/line-clamp": "0.2.1",
     "@tailwindcss/typography": "0.4.1",
+    "@types/ckeditor__ckeditor5-build-classic": "^29.0.1",
     "@types/jasmine": "~3.6.0",
     "@types/lodash": "^4.14.172",
     "@types/node": "^12.20.21",
