mat calendar added

--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.4",
+    "@angular/cdk": "^12.2.6",
     "@angular/common": "~12.1.4",
     "@angular/compiler": "~12.1.4",
     "@angular/core": "~12.1.4",
     "@angular/forms": "~12.1.4",
+    "@angular/material": "^12.2.6",
+    "@angular/material-moment-adapter": "^12.2.6",
     "@angular/platform-browser": "~12.1.4",
     "@angular/platform-browser-dynamic": "~12.1.4",
     "@angular/router": "~12.1.4",
@@ -29,6 +32,7 @@
     "animate.css": "^4.1.1",
     "aws-sdk": "^2.977.0",
     "lodash": "^4.17.21",
+    "multiple-date-picker": "^2.1.6",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.4",
     "tslib": "^2.0.0",
