--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "types" : ["node"],
+    "strictPropertyInitialization": false,
+    "types" : ["node","gapi", "gapi.auth2"],
     "strictTemplates": true
   }
 }
