--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "@types/gapi.auth2": "0.0.54",
     "animate.css": "^4.1.1",
     "aws-sdk": "^2.977.0",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "multiple-date-picker": "^2.1.6",
     "ng-lazyload-image": "^9.1.0",
+    "ngx-cookie-service": "^12.0.3",
     "ngx-material-timepicker": "^5.5.3",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.4",
